fix english translation been covered

--- a/scss/mixin/_english.scss
+++ b/scss/mixin/_english.scss
@@ -7,7 +7,7 @@
   z-index: $z-toast;
   white-space: nowrap;
   position: absolute;
-  top: -0.8rem;
+  top: -0.6rem;
   left: 0;
   line-height: 1;
   padding: 3px 5px;
