--- a/scss/typepad.css
+++ b/scss/typepad.css
@@ -1259,7 +1259,7 @@ body.black .text-black {
   z-index: 100;
   white-space: nowrap;
   position: absolute;
-  top: -0.8rem;
+  top: -0.6rem;
   left: 0;
   line-height: 1;
   padding: 3px 5px;
